--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
    </div>          
     
    <footer>
-     Credits: Troy Dave Amol
+     @Credits: Troy Dave Amol
    </footer>
 </body>
 </html>
